--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="./dist/index.css"></link>
+		<link rel="stylesheet" href="./built-files/index.css"></link>
 	</head>
 
 	<body>
@@ -38,6 +38,6 @@
 			</ul>
 		</div>
 
-		<script src="./dist/index.js"></script>
+		<script src="./built-files/index.js"></script>
 	</body>
 </html>
